--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "bundle/Visual-Mark"]
 	path = bundle/Visual-Mark
 	url = git://github.com/vim-scripts/Visual-Mark.git
+[submodule "bundle/ctrlp.vim"]
+	path = bundle/ctrlp.vim
+	url = https://github.com/kien/ctrlp.vim.git
